--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,25 +51,12 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
             app:srcCompat="@drawable/bottom_white"
-            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.0"/>
-    <TextView
-            android:id="@+id/textView"
-            android:layout_width="246dp"
-            android:layout_height="44dp"
-            android:text="Administración"
-            android:textColor="@color/black"
-            android:textSize="34sp"
-            android:textStyle="bold"
-            tools:ignore="MissingConstraints"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="40dp" android:layout_marginStart="16dp"/>
+            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.0"
+            tools:layout_editor_absoluteY="172dp"/>
     <TextView
             android:layout_width="246dp"
             android:layout_height="44dp"
@@ -78,13 +65,17 @@
             android:textSize="34sp"
             android:textStyle="bold"
             tools:ignore="MissingConstraints" android:id="@+id/textView5"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="116dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="76dp"/>
     <ImageView
-            android:layout_width="451dp"
-            android:layout_height="90dp" app:srcCompat="@drawable/lineaverde" android:id="@+id/imageView7"
+            android:layout_width="434dp"
+            android:layout_height="80dp" app:srcCompat="@drawable/lineaverde" android:id="@+id/imageView7"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.173"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="48dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.141"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
+    <ImageView
+            android:layout_width="54dp"
+            android:layout_height="101dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView9"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="60dp" android:layout_marginStart="44dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
