--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -65,7 +65,8 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/recuadros"
         android:ems="10"
-        android:inputType="date"
+        android:hint="Fecha de reserva"
+        android:inputType="none"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtCliente"
