--- a/app/src/main/res/layout/activity_listgestion.xml
+++ b/app/src/main/res/layout/activity_listgestion.xml
@@ -16,7 +16,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/top_background" />
+            app:srcCompat="@drawable/top_background" android:background="#D7D6D7"/>
 
     <TextView
             android:id="@+id/gestion"
