--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/bottom_white"
             tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.0"
-            tools:layout_editor_absoluteY="364dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="324dp"/>
     <TextView
             android:layout_width="246dp"
             android:layout_height="44dp"
