--- a/app/src/main/res/layout/activity_reservas.xml
+++ b/app/src/main/res/layout/activity_reservas.xml
@@ -7,72 +7,74 @@
     android:background="#D7D6D7"
     tools:context=".create.CreateBooking">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="314dp"
-        android:layout_height="530dp"
-        android:scaleType="fitStart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.01"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/top_background" />
-
     <TextView
-        android:id="@+id/tvTituloRes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
-        android:text="RESERVAS"
-        android:textColor="#ffffff"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+            android:text="Agregar nueva reserva"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView4"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="208dp" android:layout_marginStart="104dp" android:textColor="#068151"
+            android:textSize="20sp"/>
+    <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="314dp"
+            android:layout_height="530dp"
+            android:scaleType="fitStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/top_background"/>
+    <TextView
+            android:id="@+id/tvTituloRes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="RESERVAS"
+            android:textColor="#ffffff"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"/>
 
+
+    <EditText
+            android:id="@+id/edtFecha"
+            android:layout_width="263dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/recuadros"
+            android:ems="10"
+            android:hint="Fecha de reserva"
+            android:inputType="none"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtCliente"
+            tools:ignore="SpeakableTextPresentCheck"/>
     <Spinner
-        android:id="@+id/spSilla"
-        android:layout_width="263dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="212dp"
-        android:background="@drawable/recuadros"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
-
+            android:id="@+id/spSilla"
+            android:layout_width="263dp"
+            android:layout_height="48dp"
+            android:background="@drawable/recuadros"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="272dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="72dp"/>
     <EditText
-        android:id="@+id/edtCliente"
-        android:layout_width="263dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/recuadros"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="Usuario"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spSilla" />
-
-    <EditText
-        android:id="@+id/edtFecha"
-        android:layout_width="263dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/recuadros"
-        android:ems="10"
-        android:hint="Fecha de reserva"
-        android:inputType="none"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtCliente"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-
+            android:id="@+id/edtCliente"
+            android:layout_width="263dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/recuadros"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="Usuario"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spSilla"/>
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnAgregarRes"
         android:layout_width="302dp"
