--- a/app/src/main/res/layout/activity_torneos.xml
+++ b/app/src/main/res/layout/activity_torneos.xml
@@ -7,6 +7,24 @@
                                                    android:background="#D7D6D7"
                                                    tools:context=".create.CreateTorneos">
 
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAgregarTorneo"
+            android:layout_width="302dp"
+            android:layout_height="59dp"
+            android:layout_marginStart="50dp"
+            android:background="@drawable/button"
+            android:text="Añadir Torneo"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="550dp"/>
+    <TextView
+            android:text="Agregar nuevo torneo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView2"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="160dp" android:layout_marginStart="112dp" android:textColor="#068151"
+            android:textSize="20sp"/>
     <ImageView
             android:id="@+id/imageView4"
             android:layout_width="314dp"
@@ -27,8 +45,7 @@
             android:textStyle="bold"
             tools:ignore="MissingConstraints"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp" android:layout_marginStart="10dp"/>
-
+            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
     <ScrollView
             android:layout_width="293dp"
             android:layout_height="276dp" app:layout_constraintTop_toTopOf="parent"
@@ -125,16 +142,4 @@
                     tools:ignore="EditableContentDescCheck"/>
         </LinearLayout>
     </ScrollView>
-    <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnAgregar"
-            android:layout_width="302dp"
-            android:layout_height="59dp"
-            android:background="@drawable/button"
-            android:layout_gravity="end|bottom"
-            android:text="AGREGAR"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
