--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -7,31 +7,37 @@
     android:background="#D7D6D7"
     tools:context=".create.CreateUsers">
 
+    <TextView
+            android:text="Agregar nuevo usuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="172dp" android:layout_marginStart="112dp" android:textColor="#068151"
+            android:textSize="20sp"/>
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="314dp"
-        android:layout_height="530dp"
-        android:layout_marginEnd="96dp"
-        android:scaleType="fitStart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/top_background" />
+            android:id="@+id/imageView3"
+            android:layout_width="314dp"
+            android:layout_height="530dp"
+            android:layout_marginEnd="100dp"
+            android:scaleType="fitStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/top_background"/>
+
 
     <TextView
-        android:id="@+id/usuarios"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="16dp"
-        android:text="USUARIOS"
-        android:textColor="#ffffff"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-
+            android:id="@+id/usuarios"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="USUARIOS"
+            android:textColor="#ffffff"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints"/>
     <ScrollView
         android:layout_width="293dp"
         android:layout_height="276dp"
@@ -157,18 +163,17 @@
     </ScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btUserAdd"
-        android:layout_width="302dp"
-        android:layout_height="59dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/button"
-        android:text="Añadir Usuario"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:id="@+id/btUserAdd"
+            android:layout_width="302dp"
+            android:layout_height="59dp"
+            android:text="Añadir Usuario"
+            android:background="@drawable/button"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="550dp"
+            android:layout_marginStart="50dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
