Todas las opciones de listar + algunos retoques

--- a/app/src/main/res/layout/activity_precios.xml
+++ b/app/src/main/res/layout/activity_precios.xml
@@ -5,7 +5,7 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:background="#D7D6D7"
-                                                   tools:context=".list.PreciosActivity">
+                                                   tools:context=".list.ListPrecios">
 
     <ImageView
             android:id="@+id/imageView6"
