--- a/app/src/main/res/layout/activity_delete_precio.xml
+++ b/app/src/main/res/layout/activity_delete_precio.xml
@@ -20,7 +20,7 @@
             app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
-            android:id="@+id/torneos"
+            android:id="@+id/PRECIOS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="PRECIOS"
