--- a/app/src/main/res/layout/activity_torneos.xml
+++ b/app/src/main/res/layout/activity_torneos.xml
@@ -18,7 +18,7 @@
             app:srcCompat="@drawable/top_background" app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
-            android:id="@+id/torneos"
+            android:id="@+id/PRECIOS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TORNEOS"
